# rust-test

./: README.md
test/: Cargo.toml
test/src/: lib.rs  main.rs
