[package]
name = "test"
version = "0.1.0"
authors = ["vkalyazin <vladislav.kalyazin@gmail.com>"]

[dependencies]
exonum = "0.9.0"
exonum-configuration = "0.9.0"
exonum-time = "0.9.0"
serde = "1.0.10"
serde_derive = "1.0.10"
serde_json = "1.0.2"
failure = "0.1.2"
log = "=0.4.3"
chrono = { version = "=0.4", features = ["serde"] }
